# Hexapod_drake

./: README.md
hexapod_drake/: BUILD.bazel  hexapod_simulation.cc
hexapod_drake/mesh/: body.mtl  link1.STL  link2.STL  link3.STL  link3.mtl
hexapod_drake/urdf/: draft.sdf  hexapod.config  hexapod_description.sdf  hexapod_description.urdf  hexapod_description_with_xacro.urdf
